syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "RestaurantManagement.Restaurants.Protos";



service RestaurantManagementService {

	rpc RegisterGuest(GuestRegistrationRequest) returns (google.protobuf.Empty);
}



message GuestRegistrationRequest{
   	int32 GuestId = 1;
	int32 RestaurantId = 2;
	string GuestEmail = 3;
}

